# CLI-Expense-Manager

./: CMakeLists.txt  main.c
data/: users.txt
include/: file_manager.h  menu.h  user_service.h
include/core/: core.h
include/models/: expense.h  file_handler.h  user.h
src/: file_manager.c  menu.c  user_service.c
src/core/: core.c
